data/all_generated_tests/raw_wast_tests/br_if_EdgeCaseFailuresinbr_table_1915.wast
;; 6. **Test 6: `br_if` in a loop with conditional backward branch**    - **Constraint**: Verify looping conditions and stack state when `br_if` branches to loop start.    - **Check**: Ensures proper stack unwinding and loop restart.    - **Relation to Edge Cases**: Confirms `br_table` handles backward jumps in loops similar to how `br_if` conditions loops.

(assert_invalid
  (module (func $br_if-loop-backward-branch (loop (br_if 0 (i32.const 1) (i32.const 1))))
  "type mismatch"
))